Fixed gap between book rows and title

--- a/Website/index.css
+++ b/Website/index.css
@@ -235,7 +235,7 @@
 .book-rows {
     width: 90%;
     height: 30%;
-    margin-top: 2%;
+    margin-top: 1.2%;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid black;
